# ndn-ext

./: ATTRIBUTION.md  Cargo.toml  README.md
crates/bindings/ndn-web-attach/: Cargo.toml
crates/bindings/ndn-web-attach/src/: lib.rs
crates/coding/ndn-coding/: Cargo.toml  README.md
crates/coding/ndn-coding/src/: assembler.rs  config.rs  cope.rs  cope_face.rs  cope_mesh.rs  endpoint.rs  fec.rs  field.rs  lib.rs  link_fec.rs  metadata.rs  mgmt.rs  policy.rs  recode.rs  recode_compute.rs  recode_face.rs  segmenter.rs
crates/coding/ndn-coding/tests/: cope_mesh.rs  end_to_end.rs  recode_compute.rs  recode_engine.rs  recode_interop.rs  recode_throughput.rs  recode_wallclock.rs
crates/compute/ndn-compute/: Cargo.toml  README.md
crates/compute/ndn-compute/src/: client.rs  codec.rs  compute_face.rs  executor.rs  lib.rs  registry.rs  sealed.rs  service.rs  thunk.rs  wasm_exec.rs
crates/compute/ndn-compute/tests/: end_to_end.rs  wasm_exec.rs
crates/compute/ndn-sealed-box/: Cargo.toml
crates/compute/ndn-sealed-box/src/: lib.rs
crates/dashboard/ndn-dashboard-core/: Cargo.toml
crates/dashboard/ndn-dashboard-core/src/: engine.rs  forwarder_profile.rs  identity_axis.rs  keyguard.rs  lib.rs  mgmt.rs  native_join.rs  operator_keyring.rs  operator_keyring_store.rs  preprovision.rs  security_chains.rs  signed_data_chain.rs  types.rs
crates/dashboard/ndn-dashboard-core/tests/: smoke_engine.rs
crates/discovery/ndn-discovery/: Cargo.toml
crates/discovery/ndn-discovery-broadcast/: Cargo.toml
crates/discovery/ndn-discovery-broadcast/src/: lib.rs
crates/discovery/ndn-discovery/src/: composite.rs  config.rs  ether_nd.rs  lib.rs  mgmt.rs  prefix_announce.rs  wire.rs
crates/faces/ndn-face-afxdp/: Cargo.toml
crates/faces/ndn-face-afxdp/bpf/: README.md
crates/faces/ndn-face-afxdp/src/: af_xdp.rs  lib.rs
crates/faces/ndn-face-afxdp/tests/: af_xdp_dataplane.rs
crates/faces/ndn-face-ble-adv/: Cargo.toml
crates/faces/ndn-face-ble-adv/src/: lib.rs  loopback.rs
crates/faces/ndn-face-ble-adv/tests/: fragmentation.rs
crates/faces/ndn-face-bluetooth/: Cargo.toml
crates/faces/ndn-face-bluetooth/src/: framing.rs  lib.rs  linux.rs  macos.rs
crates/faces/ndn-face-monitor-wifi/: .gitignore  Cargo.toml
crates/faces/ndn-face-monitor-wifi/examples/: airtime_ab.rs  airtime_ab_onair.rs  ampdu_flood.rs  bisect_bringup.rs  c2h_probe.rs  cal_dump.rs  cal_probe.rs  efuse_rfe.rs  espnow_libusb.rs  espnow_probe.rs  face_batch.rs  force_golden_flood.rs  freq_agile.rs  inject_mcs.rs  monitor_roundtrip.rs  mt7612_bench.rs  mt7612_cognition.rs  mt7612_frameio.rs  mt7612_fwload.rs  mt7612_qosdiag.rs  mt7612_rx.rs  mt7612_sizetest.rs  mt7612_throughput.rs  mt7612_tx.rs  mt7612_txdiag.rs  mt7612_txring.rs  mt7612_usbagg.rs  name_filter.rs  named_radio_face.rs  pa_heat.rs  pinmux_check.rs  reception_rx.rs  replay_full.rs  report_listen.rs  rfe_dump.rs  rtl_modeswitch.rs  rx_ambient.rs  rx_igi.rs  rx_probe.rs  rx_pump_test.rs  (+12 more)
crates/faces/ndn-face-monitor-wifi/fw/: README.md  rtl8822e_txpwr_lmt.txt
crates/faces/ndn-face-monitor-wifi/golden/: cmdtest.pcap  decode_usbmon.py  mt7612_cmdtest.py  mt7612_repro.py  mycold.pcap  myrust.pcap  myusb3.pcap
crates/faces/ndn-face-monitor-wifi/macos-tools/: modeswitch_seize  modeswitch_seize.c
crates/faces/ndn-face-monitor-wifi/scripts/: agg_capture.sh  agg_derisk.sh  gen_8821c_tables.py  gen_mt7612_chanset.py  gen_mt7612_chanset_5g.py  gen_mt7612_init.py  gen_mt7612_replay.py  ofdm5_demod.py  sdr_fft.sh  sdr_onair_test.sh  sdr_power.sh
crates/faces/ndn-face-monitor-wifi/src/: channel_manager.rs  control.rs  lib.rs  libusb_rtl88xx.rs  measure.rs  radio.rs
crates/faces/ndn-face-quic/: Cargo.toml
crates/faces/ndn-face-quic/src/: lib.rs
crates/faces/ndn-face-quic/tests/: loopback.rs
crates/faces/ndn-face-serial/: Cargo.toml
crates/faces/ndn-face-serial/src/: cobs.rs  lib.rs  serial.rs
crates/faces/ndn-face-shared-worker/: Cargo.toml
crates/faces/ndn-face-shared-worker/src/: codec.rs  error.rs  lib.rs  proxy.rs  worker.rs
crates/faces/ndn-face-shm/: Cargo.toml
crates/faces/ndn-face-shm/src/: lib.rs  spsc.rs
crates/faces/ndn-face-webble/: Cargo.toml
crates/faces/ndn-face-webble/src/: framing.rs  lib.rs  wasm.rs
crates/faces/ndn-face-webrtc/: Cargo.toml
crates/faces/ndn-face-webrtc/docs/: worker-bridge.md
crates/faces/ndn-face-webrtc/src/: lib.rs  native.rs  signaling.rs  wasm.rs
crates/faces/ndn-face-webrtc/tests/: native_loopback.rs
crates/faces/ndn-face-websocket/: Cargo.toml
crates/faces/ndn-face-websocket/src/: lib.rs
crates/faces/ndn-face-webtransport/: Cargo.toml
crates/faces/ndn-face-webtransport-wasm/: Cargo.toml
crates/faces/ndn-face-webtransport-wasm/src/: lib.rs
crates/faces/ndn-face-webtransport-wasm/tests/: native_xwt_roundtrip.rs
crates/faces/ndn-face-webtransport/src/: lib.rs
crates/faces/ndn-face-webtransport/tests/: loopback.rs
crates/faces/ndn-face-wifi-aware/: Cargo.toml
crates/faces/ndn-face-wifi-aware/src/: discovery.rs  lib.rs  loopback.rs
crates/faces/ndn-face-wifi-aware/tests/: discovery.rs  ndp_bulk.rs  through_engine.rs
crates/faces/ndn-ipc-shm/: Cargo.toml
crates/faces/ndn-ipc-shm/src/: lib.rs
crates/faces/ndn-radio-cognition/: Cargo.toml
crates/faces/ndn-radio-cognition/src/: calibrate.rs  contextual.rs  demand.rs  lib.rs  plan.rs  policy.rs  report.rs  sense.rs  strategy.rs
crates/faces/ndn-remote-signer-webrtc/: Cargo.toml
crates/faces/ndn-remote-signer-webrtc/src/: lib.rs
crates/faces/ndn-rtc-signaling-relay/: Cargo.toml  Dockerfile
crates/faces/ndn-rtc-signaling-relay/src/: client.rs  lib.rs  listener.rs  main.rs  server.rs
crates/faces/ndn-rtc-signaling-relay/tests/: listener_accepts.rs  native_via_relay.rs
crates/faces/ndn-signal-sources/: Cargo.toml
crates/faces/ndn-signal-sources/src/: lib.rs
crates/onboarding/ndn-trust-envelope/: Cargo.toml
crates/pipes/ndn-pipes/: Cargo.toml
crates/pipes/ndn-pipes/src/: crypto.rs  (+9 more)
crates/ratelimit/ndn-ratelimit/: Cargo.toml  README.md
examples/radio-ping/: Cargo.toml
examples/radio-ping/src/: main.rs
(+165 files in other folders)
