[package]
name = "example-radio-ping"
version = "0.0.0"
edition.workspace = true
publish = false

[features]
# Mac / hosts without a kernel monitor driver: drive the RTL8812EU over libusb.
libusb = ["ndn-face-monitor-wifi/libusb-backend"]

[dependencies]
ndn-packet            = { workspace = true, features = ["std"] }
ndn-engine            = { workspace = true }
ndn-app               = { workspace = true }
ndn-security          = { workspace = true }
ndn-face-monitor-wifi = { workspace = true }
tokio      = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-util = { workspace = true }
bytes      = { workspace = true }
anyhow     = { workspace = true }
