[package]
name = "ndn-coding"
description = "Network coding for NDN — F1 producer/consumer systematic FEC over named segment-sets"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.scope]
# F1 is content-layer FEC: pragmatic engineering with no adopted
# community spec (RFC 9273 is the nearest anchor), so the crate is an
# `extension`, not `spec`. F2 (RLNC in-network recoding) stays gated
# behind `f2-recode`; its trust model is decided in
# docs/doctrine/nc-recoding-trust-model-2026-05-23.md.
classification = "extension"

[features]
default = ["endpoint", "mgmt"]
# Ergonomic producer/consumer API (`CodedProducer`, `CodedFetcher`).
# Pulls in `ndn-app`; turn it off for the pure FEC core (the
# wasm32/embedded-minimal build that only wants codec + GF(2^8) +
# encoder/decoder).
endpoint = ["dep:ndn-app", "dep:ndn-transport", "dep:tokio"]
# NFD management handler (`CodingMgmtHandler`) bridging the policy table to
# `ndn-mgmt`'s `CodingHandler`. Pulls `ndn-mgmt` (→ `ndn-app` → the native
# forwarder), so it's gated off for the pure-codec build that drives FEC over
# its own transport (e.g. a raw radio face). On by default — existing
# consumers are unaffected.
mgmt = ["dep:ndn-mgmt"]
# Enable AVX2/NEON SIMD path for GF(2^8) arithmetic. Off by default;
# scalar path is the reference implementation.
simd = []
# F2 in-network RLNC recoding — pure core (descriptor/vector codec,
# generation buffer, verify-on-decode). Stays wasm32/embedded-clean:
# adds only `sha2` for the source-row commitment hash. The trust model
# is `docs/doctrine/nc-recoding-trust-model-2026-05-23.md`, the wire
# format `docs/notes/coding-f2-wire-spec-2026-05-23.md`.
f2-recode = ["dep:sha2"]
# F3 link-layer inter-flow (COPE-style) network coding — the pure coding
# core (`cope` module): a relay XORs native frames for different next-hops
# when each recipient holds the others (overheard). XOR-only, no extra deps,
# wasm/embedded-clean. Face-driver wiring (a broadcast-face LinkServiceFeature)
# is the deployment seam, not in this crate. See the design memo and the
# doctrine's F3 placement note.
f3-link = []
# F3 broadcast-link wiring — `CopeBroadcastLink<T: Transport>` over a
# broadcast medium (code-on-egress / decode-on-ingress). Native next-hop is
# supplied by the forwarding plane (the layering constraint); the
# reception-report control protocol and engine-egress integration are seams.
f3-link-face = ["f3-link", "dep:ndn-transport", "dep:tokio"]
# F3 mesh auto-installation — CopeMesh installs one CopeMemberFace per
# neighbor (from a routing/neighbor table) + a single ingress face on a live
# engine, with a reception-report/flush ticker. Native.
f3-link-mesh = ["f3-link-face", "dep:ndn-engine", "dep:tokio-util"]
# F2 native engine integration — the synthetic `RecoderFace` (mirrors
# ndn-compute's ComputeFace) plus delegated-recoder signing/verify.
# Native only (pulls the forwarder + signer); not built for wasm.
f2-recode-face = [
    "f2-recode",
    "dep:ndn-engine",
    "dep:ndn-security",
    "dep:ndn-transport",
    "dep:tokio",
    "dep:tokio-util",
]
# Register the `_nc/<vector>` deterministic recode as an ndn-compute function
# (Tier-0 ComputeHandler), so it appears in /localhost/nfd/compute/list and
# composes with the compute machinery. Native.
f2-recode-compute = ["f2-recode-face", "dep:ndn-compute"]

[dependencies]
ndn-foundation-types = { workspace = true }
ndn-packet           = { workspace = true, features = ["std"] }
ndn-tlv              = { workspace = true, features = ["std"] }
ndn-store            = { workspace = true }
ndn-mgmt             = { workspace = true, optional = true }
toml                 = "0.8"
bytes                = { workspace = true, features = ["std"] }
thiserror            = { workspace = true }
tracing              = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
# endpoint-only runtime deps (optional; enabled by the `endpoint` feature)
ndn-app              = { workspace = true, optional = true }
ndn-transport        = { workspace = true, optional = true }
tokio                = { workspace = true, features = ["rt", "sync", "time", "macros"], optional = true }
# F2 deps (optional; enabled by `f2-recode` / `f2-recode-face`)
sha2                 = { workspace = true, optional = true }
ndn-engine           = { workspace = true, optional = true }
ndn-security         = { workspace = true, optional = true }
ndn-compute          = { workspace = true, optional = true }
tokio-util           = { workspace = true, optional = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["rt", "macros", "time"] }
ndn-app      = { workspace = true }
ndn-config   = { workspace = true }
ndn-engine   = { workspace = true }
ndn-face    = { workspace = true }
ndn-transport = { workspace = true }
