[package]
name = "ndn-compute"
description = "NDN in-network compute: ComputeService, ComputeFace, ComputeRegistry, ComputeHandler"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.scope]
classification = "extension"

[features]
# Sandboxed, fuel-metered WASM compute kernels via wasmtime. Off by default to
# keep the base dependency surface light.
wasm-exec = ["dep:wasmtime", "dep:anyhow"]
# Confidential reflexive params: X25519 ECDH + HKDF-SHA256 + AES-256-GCM. The
# "sealed box" is shared via ndn-sealed-box; ring still backs the per-request
# session-key path (client/codec).
sealed-params = ["dep:ring", "dep:ndn-sealed-box"]

[dependencies]
ndn-packet    = { workspace = true, features = ["std"] }
ndn-transport = { workspace = true }
ndn-engine    = { workspace = true }
ndn-store     = { workspace = true }
ndn-app       = { workspace = true }
ndn-security  = { workspace = true }
ndn-face-local = { workspace = true }
ndn-mgmt      = { workspace = true }
ndn-tlv       = { workspace = true, features = ["std"] }
bytes         = { workspace = true, features = ["std"] }
tokio         = { workspace = true, features = ["sync", "rt", "time"] }
tokio-util    = { workspace = true }
tracing       = { workspace = true }
anyhow        = { workspace = true, optional = true }
ring          = { workspace = true, optional = true }
ndn-sealed-box = { workspace = true, optional = true }
wasmtime      = { version = "31", default-features = false, features = ["cranelift", "runtime"], optional = true }

[dev-dependencies]
tokio   = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
wat     = "1"
