[package]
name = "ndn-face-quic"
description = "Raw-QUIC forwarder-to-forwarder face for ndn-rs (TLS 1.3, connection migration)"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.scope]
classification = "extension"

[dependencies]
ndn-transport = { workspace = true }
ndn-packet    = { workspace = true, features = ["std"] }
bytes         = { workspace = true, features = ["std"] }
tracing       = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = ["sync", "rt", "macros", "time", "net"] }
sha2          = { workspace = true }
rcgen         = { workspace = true }
# quinn (raw QUIC) + rustls 0.23 on the ring provider — the same crypto stack
# ndn-rs already uses (rcgen/tokio-rustls), so no new crypto backend.
quinn         = { version = "0.11", default-features = false, features = ["ring", "runtime-tokio", "rustls"] }
rustls        = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = { workspace = true }
# Bundled Mozilla WebPKI roots for the `WebPki` dial path (validate a peer's
# publicly-trusted/ACME cert without depending on the OS trust store).
webpki-roots  = "1"

[dev-dependencies]
tokio    = { workspace = true, features = ["full"] }
ndn-tlv  = { workspace = true }
