[package]
name = "ndn-face-webrtc"
description = "WebRTC datachannel face — turns the browser into a real ndn-rs peer (Phase 5)"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.scope]
classification = "extension"

[dependencies]
ndn-transport = { workspace = true }
ndn-packet    = { workspace = true, features = ["std"] }
bytes         = { workspace = true, features = ["std"] }
tokio         = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tracing       = { workspace = true }
thiserror     = { workspace = true }
async-trait   = { workspace = true }
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
base64        = { workspace = true }
futures       = { workspace = true }

# Native-only: webrtc-rs (Pion port). Pure Rust, used in production.
# webrtc-rs is async-std-historical but its public API is runtime-agnostic
# at the Tokio entry points we use (start with tokio::spawn for callbacks).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webrtc = "0.13"

# Wasm-only: web-sys datachannel surface. Each peer is a single
# RtcPeerConnection holding one reliable ordered RtcDataChannel.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys = { version = "0.3", features = [
  "RtcPeerConnection",
  "RtcConfiguration",
  "RtcIceServer",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "RtcDataChannelEvent",
  "RtcDataChannelType",
  "RtcDataChannelState",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcSdpType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceGatheringState",
  "MessageEvent",
  "Event",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
