[package]
name = "ndn-rtc-signaling-relay"
description = "One-shot HTTP rendezvous server for ndn-face-webrtc signaling (Phase 5)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata.scope]
classification = "extension"

[lib]
name = "ndn_rtc_signaling_relay"
path = "src/lib.rs"

[[bin]]
name = "ndn-rtc-signaling-relay"
path = "src/main.rs"

[dependencies]
ndn-face-webrtc = { workspace = true }
tokio        = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
axum         = "0.8"
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
reqwest      = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap      = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
ndn-face-webrtc = { workspace = true }
ndn-transport   = { workspace = true }
bytes           = { workspace = true, features = ["std"] }
